--- a/app/Src/EditCampaignScreen.fx.yaml
+++ b/app/Src/EditCampaignScreen.fx.yaml
@@ -260,6 +260,16 @@ EditCampaignScreen As screen:
                 IsInDataCard: =true
                 Items: =Parent.Default
                 MaxAttachments: =1
+                OnAddFile: |-
+                    =Collect(
+                        PreviewResipientList, 
+                        ExcelPreview.Run(ExistingCampaignGallery.Selected.ID)
+                    );
+                    Patch(
+                        NewCampaign, 
+                        LookUp(NewCampaign, ID = ExistingCampaignGallery.Selected.ID), 
+                        {Countofcontacts:CountRows(PreviewResipientList)}
+                    );
                 OnRemoveFile: =Clear(PreviewResipientList);
                 PaddingBottom: =5
                 PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
@@ -302,9 +312,17 @@ EditCampaignScreen As screen:
                 Fill: =RGBA(54, 176, 75, 1)
                 Height: =30
                 OnSelect: |-
-                    =If(!CountRows(PreviewResipientList), Collect(PreviewResipientList, ExcelPreview.Run(ExistingCampaignGallery.Selected.ID)));
+                    =If(
+                        !CountRows(PreviewResipientList), 
+                        Collect(PreviewResipientList, 
+                        ExcelPreview.Run(ExistingCampaignGallery.Selected.ID))
+                    );
                     UpdateContext({isRecepientPreviewVisible: true});
-                    Patch(NewCampaign, LookUp(NewCampaign, ID = ExistingCampaignGallery.Selected.ID), {Countofcontacts:CountRows(PreviewResipientList)});
+                    Patch(
+                        NewCampaign, 
+                        LookUp(NewCampaign, ID = ExistingCampaignGallery.Selected.ID), 
+                        {Countofcontacts:CountRows(PreviewResipientList)}
+                    );
                 RadiusBottomLeft: =0
                 RadiusBottomRight: =0
                 RadiusTopLeft: =0
