--- a/app/Src/CreateNew.fx.yaml
+++ b/app/Src/CreateNew.fx.yaml
@@ -15,7 +15,7 @@ CreateNew As screen:
     Save As button:
         DisplayMode: |-
             =If(
-                Len(DataCardValue1_1.Text) < 1 || !hasTemplateAttachment,
+                IsBlank(DataCardValue1_1.Text) || IsEmpty(DataCardValue25.Attachments),
                 DisplayMode.Disabled,
                 DisplayMode.Edit
             )
@@ -78,10 +78,6 @@ CreateNew As screen:
                 IsInDataCard: =true
                 Items: =Parent.Default
                 MaxAttachments: =1
-                OnAddFile: |-
-                    =UpdateContext({hasTemplateAttachment: true})
-                OnRemoveFile: |-
-                    =UpdateContext({hasTemplateAttachment: true})
                 PaddingBottom: =5
                 PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
                 PaddingRight: =5
@@ -432,8 +428,6 @@ CreateNew As screen:
                 MaxAttachments: =1
                 OnAddFile: |-
                     =UpdateContext({hasAttachment: true})
-                OnRemoveFile: |-
-                    =UpdateContext({hasAttachment: false})
                 PaddingBottom: =5
                 PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
                 PaddingRight: =5
@@ -744,7 +738,7 @@ CreateNew As screen:
     Save_1 As button:
         DisplayMode: |-
             =If(
-                Len(DataCardValue1.Text) < 1 || !hasAttachment,
+                IsBlank(DataCardValue1.Text) || IsEmpty(DataCardValue21.Attachments),
                 DisplayMode.Disabled,
                 DisplayMode.Edit
             )
