--- a/app/Src/EditCampaignScreen.fx.yaml
+++ b/app/Src/EditCampaignScreen.fx.yaml
@@ -115,6 +115,74 @@ EditCampaignScreen As screen:
         Y: =27
         ZIndex: =3
 
+        BCC_DataCard4 As typedDataCard.textualEditCard:
+            BorderStyle: =BorderStyle.Solid
+            DataField: ="BCC"
+            Default: =ThisItem.BCC
+            DisplayMode: =Parent.DisplayMode
+            DisplayName: =DataSourceInfo([@NewCampaign],DataSourceInfo.DisplayName,"BCC")
+            Fill: =RGBA(0, 0, 0, 0)
+            Height: =50
+            MaxLength: =DataSourceInfo([@NewCampaign], DataSourceInfo.MaxLength, "BCC")
+            Required: =false
+            Update: =DataCardValue28.Text
+            Width: =864
+            X: =0
+            Y: =1
+            ZIndex: =1
+
+            DataCardKey28 As label:
+                AutoHeight: =true
+                Height: =34
+                Text: =Parent.DisplayName
+                Width: =Parent.Width - 60
+                Wrap: =false
+                X: =30
+                Y: =10
+                ZIndex: =1
+
+            DataCardValue28 As text:
+                BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
+                Default: =Parent.Default
+                DelayOutput: =true
+                DisplayMode: =Parent.DisplayMode
+                MaxLength: =Parent.MaxLength
+                PaddingLeft: =5
+                RadiusBottomLeft: =0
+                RadiusBottomRight: =0
+                RadiusTopLeft: =0
+                RadiusTopRight: =0
+                Tooltip: =Parent.DisplayName
+                Width: =Parent.Width - 60
+                X: =30
+                Y: =DataCardKey28.Y + DataCardKey28.Height + 5
+                ZIndex: =2
+
+            ErrorMessage27 As label:
+                AutoHeight: =true
+                Height: =10
+                Live: =Live.Assertive
+                PaddingBottom: =0
+                PaddingLeft: =0
+                PaddingRight: =0
+                PaddingTop: =0
+                Text: =Parent.Error
+                Visible: =Parent.DisplayMode=DisplayMode.Edit
+                Width: =Parent.Width - 60
+                X: =30
+                Y: =DataCardValue28.Y + DataCardValue28.Height
+                ZIndex: =3
+
+            StarVisible27 As label:
+                Align: =Align.Center
+                Height: =DataCardKey28.Height
+                Text: ="*"
+                Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
+                Width: =30
+                Wrap: =false
+                Y: =DataCardKey28.Y
+                ZIndex: =4
+
         Template_DataCard2 As typedDataCard.comboBoxEditCard:
             BorderStyle: =BorderStyle.Solid
             DataField: ="TemplateList"
@@ -127,7 +195,7 @@ EditCampaignScreen As screen:
             Update: =DataCardValue7.Selected
             Width: =864
             X: =0
-            Y: =2
+            Y: =3
             ZIndex: =1
 
             DataCardKey6 As label:
@@ -193,7 +261,7 @@ EditCampaignScreen As screen:
             Update: =DataCardValue26.HtmlText
             Width: =864
             X: =0
-            Y: =3
+            Y: =4
             ZIndex: =1
 
             DataCardKey29 As label:
@@ -253,7 +321,7 @@ EditCampaignScreen As screen:
             Update: =DataCardValue4.Attachments
             Width: =864
             X: =0
-            Y: =4
+            Y: =5
             ZIndex: =1
 
             DataCardKey5 As label:
@@ -418,7 +486,7 @@ EditCampaignScreen As screen:
             Update: =DataCardValue5.Text
             Width: =864
             X: =0
-            Y: =1
+            Y: =2
             ZIndex: =4
 
             DataCardKey3 As label:
